Bug 234002 - Identity list sizing issue
Summary: Identity list sizing issue
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Unspecified
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-11 03:40 UTC by Christian Muehlhaeuser
Modified: 2010-05-17 06:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Proposed patch to fix this bug (706 bytes, application/octet-stream)
2010-05-11 04:54 UTC, Christian Muehlhaeuser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Muehlhaeuser 2010-04-11 03:40:39 UTC
Version:            (using KDE 4.4.2)
Installed from:    Ubuntu Packages

Clicking the bottom-right button in the main-window brings up the list of accounts in my default identity. Having three accounts, the list doesn't have a proper size-hint. It cuts off in the middle of the third account and displays a nasty vertical scrollbar on the right side of the list.

Expected behaviour: Resize the identity list so that all items fit in there without a scrollbar. Maybe let the users resize the occupied area themselves by using a vertical QSplitter.
Comment 1 Christian Muehlhaeuser 2010-05-11 04:54:23 UTC
Created attachment 43449 [details]
Proposed patch to fix this bug

Fixes identity list sizing issues. Looking at the ItemDelegate's sizeHint() isn't enough. Some extra spacing is required by QListWidget.

QListWidget::sizeHintForRow( 0 ) does the trick.
Comment 2 Christian Muehlhaeuser 2010-05-17 06:51:21 UTC
Committed to trunk and 4.4 branch, updated 4.4 branch changelog. See reviewboard for more info:

http://reviewboard.kde.org/r/3989/