* Fix #234002: Correctly calculate the sizeHint (height) of the identity / account list.

BUG: 234002


svn path=/branches/KDE/4.4/kdenetwork/kopete/; revision=1127601